--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Штоль Кристина Сергеевна</h1>
         <p>Добро пожаловать в мой репозиторий</p>
+        <a href=https://portal.edu.asu.ru/user/profile.php?id=39034> Ссылка на мой профиль </a>
     </body>
 </html>
