--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>Штоль Кристина Сергеевна</h1>
         <p>Добро пожаловать в мой репозиторий</p>
         <a href=https://portal.edu.asu.ru/user/profile.php?id=39034> Ссылка на мой профиль </a>
+        <img src="https://img.desktopwallpapers.ru/animals/pics/wide/1920x1200/1325050becb59fe46ae54d41da224292.jpg">
     </body>
 </html>
